<resources>
    <string name="app_name">Weight</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Teams</string>
    <string name="title_section3">Default</string>
    <string name="title_section4">Test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Logout</string>

    <string name="action_settings">Settings</string>


    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="attempts">Attempts Left:</string>
    <string name="title_activity_main_display">MainDisplay</string>
    <string name="weightClass">Weight Class</string>
    <string name="dummyWeightClass">856</string>
    <string name="maxIncline">Max Incline Bench -</string>
    <string name="maxBench">Max Bench -</string>
    <string name="itIsAnArrow">It is an arrow</string>
    <string name="viewWorkoutSchedule">View Workout Schedule</string>
    <string name="title_activity_workout_schedule">WorkoutSchedule</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login_screen">loginScreen</string>
    <string name="joinTeam">Join a Team</string>
    <string name="join">Join</string>
    <string name="createTeam">Create a Team</string>
    <string name="createNewTeam">New Team</string>
    <string name="teamCode">Enter Team Code</string>
    <string name="title_activity_team_creation">Create a Team</string>
    <string name="createAccount">Create Account</string>
    <string name="title_activity_create_account">createAccount</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="passwordEntryTwo">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createAccountTitle">Create an Account</string>
    <string name="usernameCreate">Username</string>
    <string name="submit">Submit</string>
    <string name="benchPress">Bench Press</string>
    <string name="numberOfReps"># of reps</string>
    <string name="lbs">Lift Weight (lbs)</string>
    <string name="militaryPress">Military Press</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="powerCleans">Power Cleans</string>
    <string name="showHome">Show on Home</string>
    <string name="inclineBench">Incline Bench</string>
    <string name="hangCleans">Hang Cleans</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>


</resources>
