<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main">




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lineSeparate"
        android:background="@drawable/line"
        android:layout_above="@+id/teamCreate"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lineSeparateTwo"
        android:background="@drawable/line"
        android:layout_below="@+id/teamCode"
        android:layout_alignLeft="@+id/lineSeparate"
        android:layout_alignStart="@+id/lineSeparate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/joinTeam"
        android:id="@+id/joinTeam"
        android:textColor="@color/detailText"
        android:layout_above="@+id/teamCode"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/teamCode"
        android:hint="@string/teamCode"
        android:textColor="@android:color/secondary_text_light"
        android:textStyle="normal|italic"
        android:textAlignment="center"
        android:singleLine="true"
        android:editable="true"
        android:layout_above="@+id/joinButton"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:text="@string/join"
        android:id="@+id/joinButton"
        android:background="@color/buttonColors"
        android:layout_above="@+id/teamCreate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:clickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/createTeam"
        android:id="@+id/teamCreate"
        android:textColor="@color/detailText"
        android:layout_above="@+id/createTeamButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/createNewTeam"
        android:id="@+id/createTeamButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp" />




</RelativeLayout>
