<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main">

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="2">

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0lbs"
            android:id="@+id/maxBenchDisplay"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benchPress"
            android:onClick="showDialog"
            android:id="@+id/benchPress"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showHome"
            android:id="@+id/checkBench"
            android:onClick="onCheckboxClicked"
            android:layout_gravity="center_vertical"
             />

    </TableRow>

    <TableRow android:gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0lbs"
            android:id="@+id/maxInclineDisplay"
            android:layout_margin="5dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inclineBench"
            android:onClick="showDetermined"
            android:id="@+id/inclineBench" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showHome"
            android:id="@+id/checkIncline"
            android:onClick="onCheckboxClicked"
            android:layout_gravity="center_vertical" />
    </TableRow>


   <TableRow android:gravity="center|center_horizontal"
       android:layout_gravity="center_horizontal"
       android:layout_marginLeft="5dp"
       android:layout_marginRight="5dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:text="0lbs"
           android:id="@+id/maxPowerDisplay"
           android:layout_margin="5dp" />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/powerCleans"
           android:onClick="showDialog"
           android:id="@+id/powerCleans" />
       <CheckBox
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/showHome"
           android:id="@+id/checkPower"
           android:onClick="onCheckboxClicked"
           android:layout_gravity="center_vertical" />
   </TableRow>




    <TableRow android:gravity="center|center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0lbs"
            android:id="@+id/maxHangDisplay"
            android:layout_margin="5dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangCleans"
            android:onClick="showDetermined"
            android:id="@+id/hangCleans" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showHome"
            android:id="@+id/checkHang"
            android:onClick="onCheckboxClicked"
            android:layout_gravity="center_vertical" />
    </TableRow>

    <TableRow android:gravity="center|center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0lbs"
            android:id="@+id/maxSquatDisplay"
            android:layout_margin="5dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat"
            android:onClick="showDialog"
            android:id="@+id/squat" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showHome"
            android:id="@+id/checkSquat"
            android:onClick="onCheckboxClicked"
            android:layout_gravity="center_vertical" />
    </TableRow>




    <TableRow android:gravity="center|center_horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0lbs"
            android:id="@+id/maxDeadliftDisplay"
            android:layout_margin="5dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadlift"
            android:onClick="showDetermined"
            android:id="@+id/deadLift" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showHome"
            android:id="@+id/checkDeadlift"
            android:onClick="onCheckboxClicked"
            android:layout_gravity="center_vertical" />
    </TableRow>



  </TableLayout>



</LinearLayout>

