<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ben.weight.loginScreen"
    android:background="@color/detailText"
    android:clickable="true">


        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/Login"
            android:background="@color/Main"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal|bottom|top"
            android:layout_marginTop="96dp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            />


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView2"
        android:background="@drawable/loginbox"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />



    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RepLocker"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Main"
        android:textSize="25dp"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />




    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toLeftOf="@+id/textView1"
        android:layout_toStartOf="@+id/textView1" />

    <EditText
        android:id="@+id/usernameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_above="@+id/password"
        android:layout_alignRight="@+id/passwordEntry"
        android:layout_alignEnd="@+id/passwordEntry">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="38dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignBottom="@+id/password"
        android:layout_toRightOf="@+id/username"
        android:layout_toEndOf="@+id/username" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attempts"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25sp"
        android:textColor="@color/detailText"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:id="@+id/createAccountButton"
        android:onClick="newAccount"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="54dp"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignRight="@+id/passwordEntry"
        android:layout_alignEnd="@+id/passwordEntry"
        style="@style/Base.TextAppearance.AppCompat.Button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="New to RepLocker?"
        android:id="@+id/newQuestion"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/darkBlue"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true" />


</RelativeLayout>
